fixed table misalignment

--- a/src/components/HistoricalComponent/HistoricalComponent.css
+++ b/src/components/HistoricalComponent/HistoricalComponent.css
@@ -10,6 +10,11 @@
   padding-top: 20px;
 }
 
+.table-row {
+  max-height: 70vh;
+  overflow: auto;
+}
+
 table {
   margin: auto !important;
 }
@@ -17,19 +22,6 @@ table {
 table th,
 table td {
   text-align: center;
-}
-
-thead,
-tbody tr {
-  display: table;
-  width: 100%;
-  table-layout: fixed;
-}
-
-tbody {
-  display: block;
-  max-height: 400px;
-  overflow: auto;
 }
 
 @media only screen and (max-width: 500px) {
